# file-squeezer

./: .gitignore  CMakeLists.txt  Doxyfile  README.md
src/: file-squeezerui.rc  main.cpp  mainwindow.cpp  mainwindow.hpp  ya-fsqueezerui.rc  yafilesqueezerui.rc
src/controls/: digitaltabsettings.cpp  digitaltabsettings.hpp  texttabsettings.cpp  texttabsettings.hpp
src/tabs/: digitaltab.cpp  digitaltab.hpp  settingstab.cpp  settingstab.hpp  texttab.cpp  texttab.hpp
src/trees/: node.cpp  node.hpp  nodegraphicsitem.cpp  nodegraphicsitem.hpp  treewidget.cpp  treewidget.hpp
src/widgets/: basetab.cpp  basetab.hpp  settings.cpp  settings.hpp  spoiler.cpp  spoiler.hpp  tabsplitter.cpp  tabsplitter.hpp
